# tulip_user_peripherals

./: README.md  main.py  peripheral_client.py  pyproject.toml  test_flow.py
peripheral_server/: Bitcraze_PMW3901.cpp  WS2812Serial.cpp  WS2812Serial.h  peripherals_server_teensy.ino
