[project]
name = "tulip-user-peripherals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "airo-robots",
    "airo-tulip-main",
    "loguru>=0.7.3",
]

[tool.uv.sources]
airo-tulip-main = { git = "https://github.com/airo-ugent/airo-tulip", branch = "user_peripherals" }
airo-robots = { git = "https://github.com/airo-ugent/airo-mono", subdirectory = "airo-robots", branch = "tulip_user_peripherals" }
